fixed alignment of h2/h4 under stores

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -81,7 +81,7 @@ h2 {
   font-size: 33px;
   text-align: center;
   margin: 0;
-  width: 1180px;
+  width: 1000px;
   height: 38px;
 
 }
@@ -96,9 +96,8 @@ h4 {
   padding: 10px;
   text-align: center;
   margin: 0;
-  justify-content: center;
   background-color: black;
-  width: 1180px;
+  width: 1000px;
   height: 25px;
 }
 
@@ -119,7 +118,6 @@ h4 {
   height: 200px;
   margin: 10px;
   display: block;
-  justify-content: center;
 }
 
 .item span {
@@ -127,7 +125,6 @@ h4 {
   display: block;
   font-weight: bold;
   text-align: center;
-  justify-content: center;
 }
 
 /* locations */
